# email_cli

./: CLAUDE.md  Cargo.toml  README.md  config.toml
src/: config.rs  main.rs
src/email/: exchange.rs  mod.rs
src/ui/: app.rs  view.rs
