[package]
name = "mail-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
tui = "0.19"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
graph-rs-sdk = "2.0"
oauth2 = "5.0"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.15"
dirs = "6.0"
